# Agent

./: .gitignore  AGENTS.md  AGENT_WAVE3_READINESS_PLAN.md  CLAUDE.md  CODEX.md  pyproject.toml  ray-cluster.yaml
agent-materials/: CONTEXT.md  Credit Agreement Terms.md  Intro Guide (Signal).md  Key Credit Terms.md  LME Provision Language.md  Learning_Material.md  PC Term Comparison.md  Review Template.json
artifacts/: edgecase_tracethrough_synthesis.md  edgecase_tracethrough_track1_parent_drop.md  edgecase_tracethrough_track2_section_failures.md  edgecase_tracethrough_track3_dup_collision.md  edgecase_tracethrough_track4_xref_ambiguity.md  edgecase_tracethrough_track5_depth_reset.md  gold_fixture_adjudication_summary_2026-02-27.json  gold_fixture_adjudication_summary_2026-02-27_update2.json  parser_v2_dual_run_m6_t2_summary.json  parser_v2_dual_run_report.json  parser_v2_dual_run_report_adjudication200.json  parser_v2_dual_run_report_candidate1000.json  parser_v2_dual_run_report_edgecases100.json  parser_v2_dual_run_report_fixtures500.json  parser_v2_dual_run_report_hard1000.json  parser_v2_dual_run_report_m6_5_candidate1000.json  parser_v2_dual_run_report_m6_5_edgecases100.json  parser_v2_dual_run_report_m6_5_fixtures500.json  parser_v2_dual_run_report_m6_5_hard1000.json  parser_v2_dual_run_report_m6_6_candidate1000.json  parser_v2_dual_run_report_m6_6_edgecases100.json  parser_v2_dual_run_report_m6_6_fixtures500.json  parser_v2_dual_run_report_m6_6_hard1000.json  parser_v2_m6_5_delta_summary.json  parser_v2_m6_5_reason_diagnostics.json  parsing_ci_gate_full_local.json  (+22 more)
(+872 files in other folders)
