[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "Pattern discovery swarm for credit agreement ontology linking"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.10",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "duckdb>=1.1",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1",
]
ray = [
    "ray[default]>=2.9",
]
llm = [
    "anthropic>=0.40",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
